  Entity.Proxy.getValue() removed, getTransientValue() added
  EntityDbConnection.setForeignKeyValues() no longer initializes fk values with an empty entity
  CallLogger refactored from EntityDbRemoteAdapter.MethodLogger
  DbConnection.MethodLogger added
  ServerLogEntry renamed to LogEntry and moved to common.model
  LogEntry.subLog field added
  EntityRbRemoteAdapter logs calls to the connection pool
  LogEntry.toString() overloaded with indentation parameter to handle sub logs
  EntityDbRemoteAdapter adds the DbConnection log as a sub log
  DbConnectionPool logs average check out time
  ClientInstanceMonitorPanel changed according to the above
  ClientMonitorPanel and ClientTypeMonitorPanel now use split panes
  DbConnection cache functionality removed
  Configuration.DEFAULT_FOREIGN_KEY_FETCH_DEPTH added
  Property.ForeignKeyProperty uses the above
  EntitySelectCriteria can now override the max fk fetch depth on fk basis
  Fixed fetch depth issue
  EntityTablePanel.showEntityMenu now takes scrolling into account
  Entity.getRawValue() removed
  DatePropertyLink.isTimestamp field added
  EntityUiUtil.populateEntityMenu() and co. moved to EntityTablePanel to resolve an ugly dep. cycle
  ChangeValueMapEditModel.defaultValueMap field removed
  Entity.getDefaultEntity() renamed to getDefaultValueMap(), overriding
  ChangeValueMapModel.getOriginalValueKeys() bug fixed, did not check for null
  ChangeValueMapModel renamed to ChangeValueMapImpl
  ChangeValueMapModel refactored from EntityModel
  ChangeValueMapPanel refactored from EntityPanel
  ChangeValueMapEditPanel refactored from EntityEditPanel
  AbstractFilteredTablePanel refactored from EntityTablePanel
  AbstractFilteredTableModel moved from common.model.table to common.model
  TableSorter moved from common.model.table to common.model
  EntityDefinition.rowColoring field added
  EntityRepository.isRowColoring() added
  ValueMap and associates moved to common.model.valuemap