@@ -3,25 +3,10 @@
  */
 package org.jminor.common.model.valuemap;
 
-import java.util.Collection;
-
 /**
  * An interface describing an object containing values mapped to keys.
  */
-public interface ValueMap<T, V> {
-
-  /**
-   * Retrieves the value mapped to the given key
-   * @param key the key
-   * @return the value mapped to the given key, null if no such mapping exists
-   */
-  V getValue(final T key);
-
-  /**
-   * Returns the values found in this map
-   * @return the values in this map
-   */
-  Collection<V> getValues();
+public interface ValueMap<T, V> extends ValueProvider<T, V>, ValueListProvider<V> {
 
   /**
    * Maps the given value to the given key, returning the old value if any
