@@ -1,7 +1,7 @@
 /*
  * Copyright (c) 2004 - 2010, Björn Darri Sigurðsson. All Rights Reserved.
  */
-package org.jminor.common.model;
+package org.jminor.common.model.valuemap;
 
 /**
  * Provides values mapped to keys.<br>
@@ -10,5 +10,11 @@ package org.jminor.common.model;
  * Time: 21:06:22<br>
  */
 public interface ValueProvider<T, V> {
+
+  /**
+   * Retrieves the value mapped to the given key
+   * @param key the key
+   * @return the value mapped to the given key, null if no such mapping exists
+   */
   public V getValue(final T key);
 }
